# zelensky-speech-fetcher

./: .gitignore  CLAUDE.md  README.md  dataset_cleanup.py  date_parse.py  date_parse_test.py  last_speech_timestamp.txt  last_speech_timestamp_en.txt  last_speech_timestamp_ua.txt  last_speech_timestamp_uk.txt  main.py  model_updater.py  pyproject.toml  run.sh  selenium_run.py
.github/workflows/: main.yml  repair-missing-full-text.yml  selenium_test.yml  test.yml
src/tools/: dataset_cleanup.py  en_chars.py  export_txt.py  top_words.py
src/z_scrap/: dataset_updater.py  date_parse.py  debug_utils.py  language_checker.py  main.py  model_updater.py  save_to_jsonl.py  selectors.py  selenium_driver.py  simple_language_checker.py  xpath_selectors.py
src/zelensky_speech_fetcher/: __init__.py
src/zelensky_speech_fetcher/tools/: dataset_cleanup.py  en_chars.py  export_txt.py  list_missing_full_text.py  measure_power.py  repair_missing_full_text.py  top_words.py  update_none_speech.py
src/zelensky_speech_fetcher/z_scrap/: dataset_updater.py  date_parse.py  main.py  save_to_jsonl.py
tests/: date_parse_test.py
