[tool.poetry]
name = "zelensky-speech-fetcher"
version = "0.1.0"
description = ""
authors = ["Slava Medvediev <slava.medvedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.20"
requests = "^2.33.1"
pandas = "^2.3.2"
datasets = "^4.0.0"
huggingface-hub = "1.12.0"
fsspec = ">=2023.1.0,<2026.0.0"
curl-cffi = ">=0.7"
lxml = ">=5.0"
playwright = ">=1.40"
poetry-core = "^2.3.2"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
transformers = "^5.5.4"
torch = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
