[tool.poetry]
name = "zelensky-speech-fetcher"
version = "0.1.0"
description = ""
authors = ["Slava Medvediev <slava.medvedev@gmail.com>"]
readme = "README.md"
packages = [{ include = "zelensky_speech_fetcher", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
requests = "^2.33.1"
pandas = "^3.0.0"
datasets = "^4.0.0"
huggingface-hub = "^1.16.4"
fsspec = ">=2023.1.0,<2027.0.0"
curl-cffi = ">=0.7"
lxml = ">=5.0"
playwright = ">=1.40"
poetry-core = "^2.3.2"

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
transformers = "^5.5.4"
torch = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
